[package]
name = "erb-num2csv"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
anyhow = "1.0.26"
regex = "1.3.1"
conquer-once = "0.2.0"
env_logger = "0.7.1"
log = "0.4.8"
rayon = "1.3.0"
structopt = "0.3.7"
serde_regex = "0.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
